# ai_engineering_henry

./: .gitignore  Makefile  README.md  pyproject.toml
01-introduction/ai_engineering/brief_builder/: main.py
01-introduction/ai_engineering/briefs/: brief.metrics.json  software_vs_ai_engineering.md
01_class/: README.md
01_class/ai_engineering/: AI_ENGINEERING_GUIDE.md
01_class/ai_engineering/brief_builder/: __init__.py  config.py  logger.py  main.py  prompts.py
01_class/python_software_engineering/: SOFTWARE_ENGINEERING_EXAMPLE.md  sample_tickets.json
01_class/python_software_engineering/src/: app.py
01_class/python_software_engineering/tests/: test_app.py
02-prompting/: README.md
02-prompting/COT/Notebooks/: cot_recomendador_aplicado.executed.ipynb
02-prompting/Prompt_Introduction/: 01-basic_example.ipynb  02-Role_base_prompts.ipynb
02-prompting/ReAct/Notebooks/: react_agente_aplicado.executed.ipynb  react_agente_aplicado.ipynb
